simplify ui configuration of fader behaviour, internal handling is modularized

--- a/motorized_fader_control/i18n/strings_en.json
+++ b/motorized_fader_control/i18n/strings_en.json
@@ -57,16 +57,18 @@
     "LABEL_USE_WEB_SOCKET": "Use WebSocket",
     "DOC_USE_WEB_SOCKET": "Enable or disable WebSocket communication.",
     "LABEL_STATE_UPDATE_INTERVAL": "State Update Interval",
-    "DOC_STATE_UPDATE_INTERVAL": "Set the interval for state updates in milliseconds. Basically 1 sec matches volumio ui playback refreshrate",
+    "DOC_STATE_UPDATE_INTERVAL": "Deprecated, we avoid ussing contious state updates. 1000ms matches the ui playback refreshrate",
     "LABEL_FADER_REALTIME_SEEK_INTERVAL": "Realtime Seek Interval",
-    "DOC_FADER_REALTIME_SEEK_INTERVAL": "Set the interval for realtime seek in milliseconds.",
+    "DOC_FADER_REALTIME_SEEK_INTERVAL": "Set the interval for realtime seek in milliseconds.1000ms matches the ui playback refreshrate",
     "LABEL_DEBUG_MODE": "Debug mode",
     "DOC_DEBUG_MODE": "Enable/Disable Logging in Debuggin mode. This will log more verbose and slow down timings"
   },
   "FADER_BEHAVIOR": {
+    "DOC_FADER_BEHAVIOR": "Configure how faders behave during playback",
+    "LABEL_FADER_BEHAVIOR": "Fader Behavior",
     "LABEL_FADER_0": "Fader 0",
     "DOC_FADER_0_CONFIGURED": "Enable or disable Fader 0 configuration.",
-    "LABEL_FADER_0_OUTPUT": "Fader 0 Output",
+    "LABEL_FADER_0_OUTPUT": "Fader 0 Behavior",
     "DOC_FADER_0_OUTPUT": "Select the output behavior for Fader 0.",
     "LABEL_FADER_0_INPUT": "Fader 0 Input",
     "DOC_FADER_0_INPUT": "Select the input behavior for Fader 0.",
@@ -80,7 +82,7 @@
     "OPTION_PLAYLIST": "Playlist",
     "LABEL_FADER_1": "Fader 1",
     "DOC_FADER_1_CONFIGURED": "Enable or disable Fader 1 configuration.",
-    "LABEL_FADER_1_OUTPUT": "Fader 1 Output",
+    "LABEL_FADER_1_OUTPUT": "Fader 1 Behavior",
     "DOC_FADER_1_OUTPUT": "Select the output behavior for Fader 1.",
     "LABEL_FADER_1_INPUT": "Fader 1 Input",
     "DOC_FADER_1_INPUT": "Select the input behavior for Fader 1.",
@@ -88,7 +90,7 @@
     "DOC_FADER_1_SEEK_TYPE": "Select the seek type for Fader 1.",
     "LABEL_FADER_2": "Fader 2",
     "DOC_FADER_2_CONFIGURED": "Enable or disable Fader 2 configuration.",
-    "LABEL_FADER_2_OUTPUT": "Fader 2 Output",
+    "LABEL_FADER_2_OUTPUT": "Fader 2 Behavior",
     "DOC_FADER_2_OUTPUT": "Select the output behavior for Fader 2.",
     "LABEL_FADER_2_INPUT": "Fader 2 Input",
     "DOC_FADER_2_INPUT": "Select the input behavior for Fader 2.",
@@ -96,7 +98,7 @@
     "DOC_FADER_2_SEEK_TYPE": "Select the seek type for Fader 2.",
     "LABEL_FADER_3": "Fader 3",
     "DOC_FADER_3_CONFIGURED": "Enable or disable Fader 3 configuration.",
-    "LABEL_FADER_3_OUTPUT": "Fader 3 Output",
+    "LABEL_FADER_3_OUTPUT": "Fader 3 Behavior",
     "DOC_FADER_3_OUTPUT": "Select the output behavior for Fader 3.",
     "LABEL_FADER_3_INPUT": "Fader 3 Input",
     "DOC_FADER_3_INPUT": "Select the input behavior for Fader 3.",
