--- a/motorized_fader_control/i18n/logs_en.json
+++ b/motorized_fader_control/i18n/logs_en.json
@@ -5,10 +5,10 @@
         "HEADER": "Starting motorized fader control plugin...",
         "SETUP": "Setting up plugin...",
         "FADER_CONTROLLER": "Starting FaderController...",
-        "WEBSOCKET": "WebSocket enabled: {value}",
+        "SERVICES": "SERVICES enabled: ",
         "VOLUME_LISTENER": "Registering Volumio volume change listener...",
         "SUCCESS": "Plugin started successfully!",
-        "ERROR": "Error starting plugin: {message}"
+        "ERROR": "Error starting plugin: "
       },
       "SETUP": {
         "FADER_CONTROLLER": {
@@ -17,22 +17,23 @@
           "SPEED_FACTORS": "Setting fader speed factors...",
           "TRIMMING": "Applying fader trim settings...",
           "SUCCESS": "FaderController initialized successfully.",
-          "ERROR": "Error initializing FaderController: {message}"
+          "ERROR": "Error initializing FaderController: "
         },
-        "WEBSOCKET": {
-          "INITIALIZING": "Initializing WebSocket connection...",
-          "SUCCESS": "WebSocket connection established.",
-          "ERROR": "Error initializing WebSocket: {message}"
+        "SERVICES": {
+          "INITIALIZING": "Initializing SERVICES connection...",
+          "SUCCESS": "SERVICES connection established.",
+          "ERROR": "Error initializing SERVICES: "
         }
       },
       "WARNINGS": {
         "NO_FADER_INDEXES": "Fader indexes not set. Please enable at least one Fader.",
-        "CONFIG_ISSUE": "Configuration issue detected: {message}"
+        "CONFIG_ISSUE": "Configuration issue detected: "
       },
       "ERRORS": {
-        "SETUP_FAILED": "Error during plugin setup: {message}",
-        "FADER_CONTROLLER_FAILED": "Error starting FaderController: {message}",
-        "GENERIC_ERROR": "An error occurred: {message}"
+        "SETUP_FAILED": "Error during plugin setup: ",
+        "FADER_CONTROLLER_FAILED": "Error starting FaderController: ",
+        "GENERIC_ERROR": "An error occurred: ",
+        "CRITICAL_ERROR": "A critical error occurred:"
       }
     }
   }
