add logging to modules, fix PLUGINstr logging to complete code

--- a/motorized_fader_control/i18n/logs_en.json
+++ b/motorized_fader_control/i18n/logs_en.json
@@ -39,6 +39,34 @@
         "FADER_CONTROLLER_FAILED": "Error starting FaderController: ",
         "GENERIC_ERROR": "An error occurred: ",
         "CRITICAL_ERROR": "A critical error occurred:"
+      },
+      "EVENT": {
+        "REGISTERED": "Event registered: ",
+        "EMIT": "Event triggered: ",
+        "EMIT_PLAYBACK": "Playback event emitted: "
+      },
+      "CACHE": {
+        "SET" : "Setting cache value: ",
+        "GET" : "Getting cache value: ",
+        "EXPIRED" : "Cache expired: ",
+        "SUBSCRIBED" : "Subscribed to cache: ",
+        "UNSUBSCRIBED" : "Unsubscribed from cache: ",
+        "CLEAR": "Clearing cache: ",
+        "CACHE_PLAYBACK_STATE": "Playback state cache: ",
+        "SET_USER_INPUT_LOCK": "Setting user input lock: ",
+        "CACHE_SEEK_PROGRESSION": "Seek progression cache: "
+      },
+      "SERVICES" : {
+        "BASE": {
+          "START_INTERVAL": "Starting interval for service: ",
+          "STOP_INTERVAL": "Stopping interval for service: "
+        },
+        "HANDLE_PLAY": "Handling play state for fader: ",
+        "UPDATE_POSITION": "Updating position for fader: ",
+        "HANDLE_MOVE": "Handling move for fader: ",
+        "UPDATE_HARDWARE": "Updating hardware for fader: ",
+        "HANDLE_UPDATE": "Handling update for fader: "
+      }
       }
     }
   }
