--- a/motorized_fader_control/i18n/logs_en.json
+++ b/motorized_fader_control/i18n/logs_en.json
@@ -82,7 +82,8 @@
         "UPDATE_HARDWARE": "Updating hardware for fader:",
         "HANDLE_UPDATE": "Handling update for fader:",
         "HANDLE_SEEK": "Handling seek for fader:",
-        "HANDLE_VOLUME": "Handling volume for fader:"
+        "HANDLE_VOLUME": "Handling volume for fader:",
+        "HANDLE_MOVED": "Handling moved for fader:"
       }
   }
 }
