--- a/motorized_fader_control/i18n/logs_en.json
+++ b/motorized_fader_control/i18n/logs_en.json
@@ -83,7 +83,11 @@
         "HANDLE_UPDATE": "Handling update for fader:",
         "HANDLE_SEEK": "Handling seek for fader:",
         "HANDLE_VOLUME": "Handling volume for fader:",
-        "HANDLE_MOVED": "Handling moved for fader:"
+        "HANDLE_MOVED": "Handling moved for fader:",
+        "FETCH_ALBUM_INFO": "Fetching album info for fader:",
+        "ALBUM_INFO": "Album info fetched for fader:",
+        "CALCULATE_POSITION": "Calculating position for fader:",
+        "CALCULATE_SEEK": "Calculating seek for fader:"
       }
   }
 }
