introduce hardware update blocks, fix seeking, set echo mode on move, block service output commands when moving

--- a/motorized_fader_control/i18n/logs_en.json
+++ b/motorized_fader_control/i18n/logs_en.json
@@ -73,8 +73,12 @@
       },
       "SERVICES" : {
         "BASE": {
-          "START_INTERVAL": "Starting interval for service:",
-          "STOP_INTERVAL": "Stopping interval for service:"
+          "START_INTERVAL": "Starting update interval for fader:",
+          "STOP_INTERVAL": "Stopping update interval for fader:",
+          "BLOCK_INTERVAL": "Blocking update interval for fader:",
+          "UNBLOCK_INTERVAL": "Unblocking update interval for fader:",
+          "BLOCK_HARDWARE": "Blocking service hardware updates for fader:",
+          "UNBLOCK_HARDWARE": "Unblocking service hardware updates for fader:"
         },
         "HANDLE_PLAY": "Handling play state for fader:",
         "UPDATE_POSITION": "Updating position for fader:",
