--- a/motorized_fader_control/i18n/logs_en.json
+++ b/motorized_fader_control/i18n/logs_en.json
@@ -56,6 +56,8 @@
       },
       "EVENT": {
         "REGISTERED": "Event registered:",
+        "UNREGISTERED": "Event unregistered:",
+        "REGISTERED_ONCE": "Event registered once:",
         "EMIT": "Event triggered:",
         "EMIT_PLAYBACK": "Playback event emitted:"
       },
